Updated Threat Interface

--- a/src/main/resources/swagger/definitions/weakness/analysis-result.yml
+++ b/src/main/resources/swagger/definitions/weakness/analysis-result.yml
@@ -2,7 +2,11 @@ type: object
 properties:
   modelID:
     type: string
-  threats:
+  securityThreats:
+    type: array
+    items:
+      $ref: '#/definitions/AppliedThreat'
+  privacyThreats:
     type: array
     items:
       $ref: '#/definitions/AppliedThreat'
