--- a/api-definition.inc.yml
+++ b/api-definition.inc.yml
@@ -1030,7 +1030,7 @@ definitions:
   Threat:
     type: object
     properties:
-      strideCategory:
+      threatCategory:
         $ref: '#/definitions/STRIDE'
       title:
         type: string
@@ -1306,7 +1306,11 @@ definitions:
     properties:
       modelID:
         type: string
-      threats:
+      securityThreats:
+        type: array
+        items:
+          $ref: '#/definitions/AppliedThreat'
+      privacyThreats:
         type: array
         items:
           $ref: '#/definitions/AppliedThreat'
