--- a/src/main/resources/swagger/definitions/storage/threat-dataset.yml
+++ b/src/main/resources/swagger/definitions/storage/threat-dataset.yml
@@ -3,7 +3,7 @@ properties:
   id:
     type: string
   threat:
-    $ref: '#/definitions/Threat'
+    $ref: '#/definitions/STRIDEThreat'
   startItem:
     type: object
     additionalProperties: true
