--- a/src/main/resources/swagger/definitions/weakness/analysis-result.yml
+++ b/src/main/resources/swagger/definitions/weakness/analysis-result.yml
@@ -2,14 +2,14 @@ type: object
 properties:
   modelID:
     type: string
-  securityThreats:
+  strideThreats:
     type: array
     items:
       $ref: '#/definitions/AppliedSTRIDEThreat'
-  privacyThreats:
+  cweThreats:
     type: array
     items:
-      $ref: '#/definitions/AppliedSTRIDEThreat'
+      $ref: '#/definitions/AppliedCweThreat'
   vulnerabilities:
     type: array
     items:
