--- a/src/main/resources/swagger/definitions/weakness/applied-stride-threat.yml
+++ b/src/main/resources/swagger/definitions/weakness/applied-stride-threat.yml
@@ -1,5 +1,5 @@
 allOf:
-  - $ref: '#/definitions/Threat'
+  - $ref: '#/definitions/StrideThreat'
   - type: object
     properties:
       threatID:
