--- a/src/main/resources/swagger/definitions/elements/properties/options/interactor-options.yml
+++ b/src/main/resources/swagger/definitions/elements/properties/options/interactor-options.yml
@@ -10,5 +10,7 @@ properties:
     $ref: '#/definitions/GenericSelection'
   accessible:
     $ref: '#/definitions/GenericSelection'
+  authenticatesItself:
+    $ref: '#/definitions/GenericSelection'
   appType:
     $ref: '#/definitions/AppType'
