--- a/src/main/resources/swagger/definitions/model/dfd-analysis.yml
+++ b/src/main/resources/swagger/definitions/model/dfd-analysis.yml
@@ -18,7 +18,7 @@ properties:
     type: array
     items:
       $ref: '#/definitions/AnalysisProcess'
-  boundaries:
+  trustBoundaries:
     type: array
     items:
       $ref: '#/definitions/AnalysisBoundary'
