--- a/src/main/resources/swagger/definitions/elements/properties/options/process-options.yml
+++ b/src/main/resources/swagger/definitions/elements/properties/options/process-options.yml
@@ -22,3 +22,5 @@ properties:
     $ref: '#/definitions/GenericSelection'
   customCommunicationProtocol:
     $ref: '#/definitions/GenericSelection'
+  programmingLanguage:
+    $ref: '#/definitions/ProgrammingLanguage'
