fixed typo in api definition

--- a/api-definition.inc.yml
+++ b/api-definition.inc.yml
@@ -1447,7 +1447,7 @@ definitions:
       cweThreats:
         type: array
         items:
-          $ref: '#/definitions/CWEThreat'
+          $ref: '#/definitions/CweThreat'
       vulnerabilities:
         type: array
         items:
