--- a/src/main/resources/swagger/definitions/weakness/analysis-result.yml
+++ b/src/main/resources/swagger/definitions/weakness/analysis-result.yml
@@ -9,7 +9,7 @@ properties:
   cweThreats:
     type: array
     items:
-      $ref: '#/definitions/CWEThreat'
+      $ref: '#/definitions/CweThreat'
   vulnerabilities:
     type: array
     items:
