fixed typo in api definition

--- a/src/main/resources/swagger/definitions/definition-index.yml
+++ b/src/main/resources/swagger/definitions/definition-index.yml
@@ -99,7 +99,7 @@ StrideThreat:
   $include: ./weakness/stride-threat.yml
 
 # CWE-based threats
-CweThreat:
+CWEThreat:
   $include: ./weakness/cwe-threat.yml
 
 # Used to set the applicable state of STRIDE threats
