--- a/api-definition.inc.yml
+++ b/api-definition.inc.yml
@@ -1153,7 +1153,7 @@ definitions:
         type: array
         items:
           type: string
-  CweThreat:
+  CWEThreat:
     type: object
     properties:
       cwe:
@@ -1447,7 +1447,7 @@ definitions:
       cweThreats:
         type: array
         items:
-          $ref: '#/definitions/CweThreat'
+          $ref: '#/definitions/CWEThreat'
       vulnerabilities:
         type: array
         items:
